--- a/content/src/main/content/jcr_root/apps/demo/components/page/samplepage/samplepage.html
+++ b/content/src/main/content/jcr_root/apps/demo/components/page/samplepage/samplepage.html
@@ -3,7 +3,8 @@
     	<div data-sly-include="/libs/wcm/core/components/init/init.jsp"></div>
     </head>
 	<body>
-		<h1>Add various product component in home page</h1>
+		<h1>Add various product component in Sample Page template</h1>
     	<div data-sly-resource="${ @path='par', resourceType='foundation/components/parsys'}"></div>
-	</body>
+
+    </body>
 </html>
